--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -20,12 +20,12 @@ jobs:
         with:
           scan-type: 'config'
           hide-progress: false
-          format: 'json'
-          output: 'trivy-results.json'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
           exit-code: '1'
           severity: 'LOW,MEDIUM,CRITICAL,HIGH'
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'trivy-results.json'
+          sarif_file: 'trivy-results.sarif'
